# imessage-exporter-redux

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile  HANDOFF.md  Package.swift  README.md
.github/workflows/: ci.yml  docker-publish.yml  package.yml
cmake/: build_stamp.hpp.in
docs/: GOOGLE.md  IOS.md  SCHEMA.md  THEMES.md
gui/: google_auth.cpp  google_auth.hpp  google_contacts.cpp  google_contacts.hpp  google_drive.cpp  google_drive.hpp  icloud_contacts.cpp  icloud_contacts.hpp  link_preview.cpp  link_preview.hpp  main.cpp  main_window.cpp  main_window.hpp  resources.qrc  secret_store.cpp  secret_store.hpp  updater.cpp  updater.hpp
include/: module.modulemap
include/imsg/: attributed_body.hpp  backup.hpp  compress.hpp  contact_book.hpp  contact_store.hpp  contacts.hpp  crypto.hpp  database.hpp  export_job.hpp  exporters.hpp  imsg_bridge.h  location.hpp  log.hpp  models.hpp  sqlite_uri.hpp  stats.hpp  theme.hpp  time_util.hpp  timeline.hpp  vcard.hpp  version.hpp
ios/: project.yml
ios/iMessageExporter/: ContentView.swift  Exporter.swift  iMessageExporterApp.swift
man/: imessage-exporter.1
packaging/chocolatey/: imessage-exporter.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/homebrew/: imessage-exporter-app.rb  imessage-exporter.rb
packaging/linux/: imessage-exporter.desktop
packaging/windows/: installer.iss
snap/: snapcraft.yaml
src/: attributed_body.cpp  backup.cpp  compress.cpp  contact_book.cpp  contact_store.cpp  contacts.cpp  crypto.cpp  database.cpp  export_job.cpp  exporters.cpp  imsg_bridge.cpp  location.cpp  log.cpp  main.cpp  models.cpp  stats.cpp  theme.cpp  time_util.cpp  timeline.cpp  vcard.cpp
tests/: test_core.cpp
